syntax = "proto3";

package product;

option go_package="./pkg/pb";

message CreateProductRequest {
    string name = 1;
    int64 stock = 2;
    int64 price = 3;
}

message CreateProductResponse {
    int64 status = 1;
    string error = 2;
    int64 id = 3;
}

message GetProductRequest {
    int64 id = 1;
}

message GetProductResponse {
    int64 status = 1;
    string error = 2;
    
    message FindOneProduct {
        int64 id = 1;
        string name = 2;
        int64 stock = 3;
        int64 price = 4;
    }
    
    FindOneProduct data = 3;
}

message DecreaseStockRequest {
    int64 id = 1;
    int64 orderId = 2;
}

message DecreaseStockResponse {
    int64 status = 1;
    string error = 2;
}

service ProductService {
    rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
    rpc GetOneProduct(GetProductRequest) returns (GetProductResponse);
    rpc DecreaseStock (DecreaseStockRequest) returns (DecreaseStockResponse);
}