syntax = "proto3";

package auth;

option go_package="./pkg/pb";

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    int64 status = 1;
    string error = 2; 
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    int64 status = 1;
    string error = 2;
    string token = 3;
}

message ValidateRequest {
    string token = 1;
}

message UserData {
    int64 userId = 1;
    string email = 2;
}

message ValidateResponse {
    int64 status = 1;
    string error = 2;
    UserData user = 3;
}

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Validate (ValidateRequest) returns (ValidateResponse);
}